# python-units

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLANS.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
src/adapters/: __init__.py
src/api/: __init__.py  public.py  si.py
src/core/: __init__.py  quantity.py  unit_definitions.py
src/models/: __init__.py  dimension.py
src/services/: __init__.py
src/units/: __init__.py  dimension.py  errors.py  quantity.py  si.py  unit.py
src/utils/: __init__.py  numbers.py
tests/integration/: test_public_api.py
tests/unit/: test_units.py
units/: __init__.py  dimension.py  errors.py  quantity.py  si.py  tests.py  unit.py
