[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-units"
version = "0.1.3"
description = "Python library to represent numbers with units"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Paul K. Korir, PhD", email = "paul.korir@gmail.com" },
]
keywords = ["units"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sci2pro/python-units"

[tool.setuptools.packages.find]
include = ["units*"]
